package com.shigu.main4.order.enums;

/**
 * 产品类别
 * Created by zhaohongbo on 17/5/31.
 */
public enum ProductType {
    XZ_ITEM //星座商品
}
