package com.shigu.main4.order.model;

/**
 * 充值订单
 * Created by zhaohongbo on 17/6/1.
 */
public interface RechangeOrder{
}
