@startuml
enum PayType{
XZ  //星座
ALI  //阿里
WX   //微信
}

interface Order{
void addMark(String msg);//添加备注
PayApplyVO payApply(PayType type);//支付申请
void addSubOrder(List<SubOrderVO> subOrders);//追加子订单
PayApplyVO repayApply(PayType type);//二次支付申请

Long pay(Long applyId,Long money);//付款确认
void refunds(Long money);//全单退订

void payed();//支付完成
void finished();//交易完成
void closed();//交易关闭
}

interface ItemOrder{
List<LogisticsVO> selLogisticses();//查询物流信息
void addLogistics(List<Long> soids,LogisticsVO logistics);//添加物流
void modifyLogistics(Long id,LogisticsVO logistics);//修改物流
ItemOrderVO orderInfo();
List<SubItemOrderVO> subOrdersInfo();
void addPackage(Long metarialId);//添加包材
void refundPackage(Long id,Long money);//退包材
void addService(Long serviceId);//添加服务
void refundService(Long id,Long money);//退服务

void sendPart(Long logisticsId,List<Long> soids,String courierNumber);//部分发货

void sended(String courierNumber);//全单发货

SenderVO selSender();//发件单位
}

interface RechangeOrder{

}

interface SubOrder{
void closed();//关闭子订单
void sended(String courierNumber);//标为已发
void refund(Long money);//退货
void distribution(Long number);//到货
void addMark(String msg);//添加备注
}

interface SubItemOrder{
void modifySku(ItemSkuVO sku);
LogisticsVO selLogistics();//查询物流信息
}

interface Sender{
void sendOrder(Order order);//发放订单给代发
}

enum ProductType{
XZ_ITEM //星座商品

}

enum OrderType{
XZ //星座商品的订单

}

enum OrderStatus{
WAIT_BUYER_PAY //等待买家付款
SELLER_CONSIGNED_PART //卖家部分发货
WAIT_SELLER_SEND_GOODS //等待卖家发货
TRADE_FINISHED  //交易完成
TRADE_CLOSED  //付款以后用户退款成功，交易自动关闭

}



class PayApplyVO{
-Long applyId;//支付申请ID
-Long money;
-String payLink;//支付链接
-PayType payType;//支付类型
-Date createTime;//创建时间
-Integer payFor;//付款理由
}

SubOrder <|-- SubItemOrder
Order <|-- ItemOrder
Order <|-- RechangeOrder
ItemOrder *-- SubItemOrder
Sender *-- Order

Order --o PayApplyVO


@enduml